[package]
name = "endurance"
version = "0.1.0"
authors = ["malcolm <malcolmbalch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.32.2", features = ["ttf", "gfx"]}
rand = "0.7.2"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

# For perf tuning
[profile.release]
debug = true
